test/ns2.l1.out
warning: name space references undefined type:
	struct baz
10 8 struct foo
20 0 struct bar
error: attempt to determine size of undefined type: struct baz
	#0                  sizeof	(builtin function)
	#1                   entry	(ns2.l1:27)
